# fsml

./: Cargo.toml  LICENSE  README.md
assets/fsml/: pod-lifecycle.fsml  simple-state-machine.fsml
assets/plantuml/: pod-lifecycle.puml
src/: lib.rs  main.rs  parser.rs
