[package]
name = "fsml"
version = "0.1.0"
authors = ["Steve Cooper <steve@stevecooper.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
pom = "3.2"
itertools = "0.9"

[lib]
name = "fsmllib"
path = "src/lib.rs"


[[bin]]
name = "fsml"
path = "src/main.rs"